[workspace]
members = [
	"Packages/rust-macros",
	"Packages/rust-shared",
	"Packages/web-server",
	"Packages/app-server-rs",
	"Packages/monitor-backend",
	#"Packages/graphlink-server",
]

# NOTE: This file is not currently being used for build-flags. See ".cargo/config.toml" for rust build-flags.

#[profile.dev]
#panic = "abort"
#lto = "off"
#debug = 1
#debug = 0 # this changes "debug" val from 2 to 0; this reduced the incremental build time (str change in main.rs) from ~32s to ~27s (still way too slow!)

# [patch.crates-io]
# # force hyper-reverse-proxy to use the same version of hyper as axum
# # this errors: " → error: failed to resolve patches for `https://github.com/rust-lang/crates.io-index`
# # 		Caused by: patch for `hyper` in `https://github.com/rust-lang/crates.io-index` points to the same source, but patches must point to different sources"
# #hyper = "0.14.16"
# # this doesn't error
# hyper = {git = "https://github.com/hyperium/hyper.git", tag = "v0.14.16"}

#[replace]
#"hyper:0.13.10" = {git = "https://github.com/hyperium/hyper.git", tag = "v0.14.16"}

[patch.crates-io]
# force deadpool-postgres to use the same version of tokio-postgres as our root project
#tokio-postgres = "0.7.1"
tokio-postgres = {git = "https://github.com/petrosagg/rust-postgres.git", branch = "copy-both", features = ["with-serde_json-1", "array-impls"]}