[workspace]
members = [
	"Packages/rust-macros",
	"Packages/rust-shared",
	"Packages/web-server",
	"Packages/app-server",
	"Packages/monitor-backend",
	#"Packages/graphlink-server",
]

# NOTE: This file is not currently being used for build-flags. See ".cargo/config.toml" for rust build-flags.

#[profile.dev]
#panic = "abort"
#lto = "off"
#debug = 1
#debug = 0 # this changes "debug" val from 2 to 0; this reduced the incremental build time (str change in main.rs) from ~32s to ~27s (still way too slow!)

# [patch.crates-io]
# # force hyper-reverse-proxy to use the same version of hyper as axum
# # this errors: " → error: failed to resolve patches for `https://github.com/rust-lang/crates.io-index`
# # 		Caused by: patch for `hyper` in `https://github.com/rust-lang/crates.io-index` points to the same source, but patches must point to different sources"
# #hyper = "0.14.16"
# # this doesn't error
# hyper = {git = "https://github.com/hyperium/hyper.git", tag = "v0.14.16"}

#[replace]
#"hyper:0.13.10" = {git = "https://github.com/hyperium/hyper.git", tag = "v0.14.16"}

[patch.crates-io]
# force deadpool-postgres to use the same version of tokio-postgres as our root project
# sync:version with "rust-shared/Cargo.toml"
#tokio-postgres = "0.7.1"
#tokio-postgres = {git = "https://github.com/petrosagg/rust-postgres.git", branch = "copy-both", features = ["with-serde_json-1", "array-impls"]}
#tokio-postgres = {git = "https://github.com/Venryx/rust-postgres.git", branch = "copy-both", features = ["with-serde_json-1", "array-impls"]}
tokio-postgres = {git = "https://github.com/MaterializeInc/rust-postgres.git", rev = "7bdd17b5acf4d7dbc53b08a9038793ab7e49da6c", features = ["with-serde_json-1", "array-impls"]}

# until jsonschema, oauth2, and sentry are updated to target a hyper-v1-compatible version of reqwest, override them all to target the github commit that supports that
#reqwest = {git = "https://github.com/seanmonstar/reqwest.git", rev = "2c11ef000b151c2eebeed2c18a7b81042220c6b0", default-features = false, features = ["rustls-tls", "json"] }

# temp, for testing
#hyper = {git = "https://github.com/Venryx/hyper.git", rev = "7ede2d586b2e0274807486b54a509bc94b179c63", features = ["client"]}
hyper = {git = "https://github.com/Venryx/hyper.git", rev = "0f7a1ee5cacdcbd4ed24d8685fee2e0d416f6e49", features = ["client"]}