[workspace]
members = [
	"Packages/rust-macros",
	"Packages/rust-shared",
	"Packages/web-server",
	"Packages/app-server",
	"Packages/monitor-backend",
	#"Packages/graphlink-server",
]

resolver = "2"

# NOTE: This file is not currently being used for build-flags. See ".cargo/config.toml" for rust build-flags.

#[profile.dev]
#panic = "abort"
#lto = "off"
#debug = 1
#debug = 0 # this changes "debug" val from 2 to 0; this reduced the incremental build time (str change in main.rs) from ~32s to ~27s (still way too slow!)

# [patch.crates-io]
# # force hyper-reverse-proxy to use the same version of hyper as axum
# # this errors: " → error: failed to resolve patches for `https://github.com/rust-lang/crates.io-index`
# # 		Caused by: patch for `hyper` in `https://github.com/rust-lang/crates.io-index` points to the same source, but patches must point to different sources"
# #hyper = "0.14.16"
# # this doesn't error
# hyper = {git = "https://github.com/hyperium/hyper.git", tag = "v0.14.16"}

#[replace]
#"hyper:0.13.10" = {git = "https://github.com/hyperium/hyper.git", tag = "v0.14.16"}

[patch.crates-io]
# force deadpool-postgres to use the same version of tokio-postgres as our root project
# sync:version with "rust-shared/Cargo.toml"
#tokio-postgres = "0.7.1"
#tokio-postgres = {git = "https://github.com/petrosagg/rust-postgres.git", branch = "copy-both", features = ["with-serde_json-1", "array-impls"]}
#tokio-postgres = {git = "https://github.com/Venryx/rust-postgres.git", branch = "copy-both", features = ["with-serde_json-1", "array-impls"]}
tokio-postgres = {git = "https://github.com/MaterializeInc/rust-postgres.git", rev = "7bdd17b5acf4d7dbc53b08a9038793ab7e49da6c", features = ["with-serde_json-1", "array-impls"]}

# temp-fix for https://github.com/tikv/pprof-rs/issues/232
#pprof = {git = "https://github.com/Erigara/pprof-rs", branch = "fix-pointer-align"}
#pprof = {git = "https://github.com/Erigara/pprof-rs", rev = "5f624c20fdd36f3396b78b954edbc7fc8b85773c"}
pprof = {git = "https://github.com/Venryx/pprof-rs-from-erigara", rev = "da8ebcdab50cfdb7a85f03d9362f93b7b7f06cbd"}

# temp-fix for seg-fault (when cranelift+pyroscope are used, and lots of activity is occuring, eg. large map import)
pyroscope = {git = "https://github.com/Venryx/pyroscope-rs", rev = "d9692080901a4f22c53de9f20314738fde5f3879"}